:heavy_plus_sign: build: Add PostgreSQL dependency and configure database settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=todolist-backend
+spring.datasource.url=postgresql://postgres:ToDo123@db.riotapyjqgmcvqpetrzx.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=ToDo123
+spring.jpa.hibernate.ddl-auto=update
