:sparkles: feat: implement TaskController with CRUD operations for tasks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.application.name=todolist-backend
-spring.datasource.url=postgresql://postgres:ToDo123@db.riotapyjqgmcvqpetrzx.supabase.co:5432/postgres
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.riotapyjqgmcvqpetrzx
 spring.datasource.password=ToDo123
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.hikari.max-lifetime=300000
+spring.datasource.hikari.idle-timeout=60000   
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
